--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,6 +32,7 @@
                     android:padding="8dp"
                     android:hint="@string/email"
                     android:textSize="20sp"
+                    android:inputType="textEmailAddress"
                     android:drawablePadding="8dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
@@ -45,6 +46,7 @@
                     android:padding="8dp"
                     android:hint="@string/password"
                     android:drawablePadding="8dp"
+                    android:inputType="textPassword"
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"/>
